# wormhole-scaffolding

solana/: Anchor.toml  package-lock.json  package.json  testing.env
solana/programs/03_governance/: Cargo.toml
solana/programs/03_governance/src/: constants.rs  context.rs  lib.rs
solana/programs/03_governance/src/state/: config.rs
solana/ts/sdk/03_governance/: program.ts
solana/ts/sdk/03_governance/accounts/: config.ts  foreignEmitter.ts
solana/ts/sdk/03_governance/instructions/: initialize.ts
solana/ts/tests/: 03_governance.ts
solana/ts/tests/helpers/: consts.ts
